fix mobile overflow

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,6 +3,7 @@
     min-height: min(100vh, 700px);
     padding: 88px 16px 16px 16px;
     position: relative;
+    overflow-x: hidden;
 }
 
 .header > :not(.children) {
